# VisualProg

./: CMakeLists.txt  Human.kt  Main.kt  README.md  local.properties  server_zmq.py  settings.gradle.kts
Calculator/: .gitignore
Calculator/app/: build.gradle.kts
Calculator/app/src/main/: AndroidManifest.xml
Calculator/app/src/main/java/com/example/Movable/classes/: Driver.kt  Human.kt
Calculator/app/src/main/java/com/example/calculator/: CalculatorActivity.kt  MainActivity.kt  PlayerActivity.kt  TrackListActivity.kt
Calculator/app/src/main/res/drawable/: button_bg.xml
Calculator/app/src/main/res/layout/: activity_main.xml  activity_track_list.xml
Calculator/app/src/main/res/values/: styles.xml  themes.xml
Calculator/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle.kts
app/src/androidTest/java/com/example/myhubapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/Movable/: Main.kt
app/src/main/java/com/example/Movable/interfaces/: Movable.kt
app/src/main/java/com/example/calculator/: LocationActivity.kt  MainActivity.kt  MobileData.kt  MobileDataActivity.kt  PlayerActivity.kt  SocketsActivity.kt
app/src/main/java/com/example/myhubapp/: MainActivity.kt
app/src/main/java/com/example/myhubapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: button_rounded.xml  player_btn_bg_next.xml  player_btn_bg_play.xml  player_btn_bg_rewind.xml  rounded_track.xml
app/src/main/res/layout/: activity_claculator.xml  activity_location.xml  activity_main.xml  activity_mobile_data.xml  activity_player.xml  activity_sockets.xml  list_item_track.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myhubapp/: ExampleUnitTest.kt
clients/: client_tcp  client_tcp.c  client_udp  client_udp.c  client_udp.py
gradle/wrapper/: gradle-wrapper.properties
iliketomoveit/: Driver.kt
server/: server  server.c
src/: main.cpp
